--- a/estilo.css
+++ b/estilo.css
@@ -50,7 +50,6 @@
 }
 
 .cover{
-    height: 600px;
     background-image: url("recursos/fondobannereq1.jpg");
     background-position: center;
     background-color: rgba(0,0,0,.5);
@@ -58,8 +57,14 @@
 }
 
 .cporteros{
-    height: 600px;
     background-image: url("recursos/fondobannerporteros.jpg");
+    background-position: center;
+    background-color: rgba(0,0,0,.5);
+    background-blend-mode: darken;
+}
+.cdefensas{
+    height: 600px;
+    background-image: url("recursos/fondodefensa.jpg");
     background-position: center;
     background-color: rgba(0,0,0,.5);
     background-blend-mode: darken;
